# TDEngine2

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TDEngine2.sln  appveyor.yml
Samples/TemplateApp/: CMakeLists.txt  README  TemplateApp.project  main.cpp  main.cpp.in  settings.cfg
Samples/TemplateApp/include/: CCustomEngineListener.h
Samples/TemplateApp/source/: CCustomEngineListener.cpp
TDEngine2/: CMakeLists.txt  Doxyfile  TDEngine2.vcxproj  TDEngine2.vcxproj.filters
TDEngine2/include/: TDEngine2.h
TDEngine2/include/audio/: IAudioSource.h
TDEngine2/include/autotests/: CBaseTestCase.h  CBaseTestFixture.h  CTestContext.h  CTestResultsTextReporter.h  ITestCase.h  ITestFixture.h  ITestResultsReporter.h
TDEngine2/include/core/: CBaseEngineCoreBuilder.h  CBaseFileSystem.h  CBaseJobManager.h  CBaseObject.h  CBasePluginManager.h  CBaseResource.h  CConfigFileEngineCoreBuilder.h  CDefaultEngineCoreBuilder.h  CEngineCore.h  CEventManager.h  CFont.h  CGameModesManager.h  CGameUserSettings.h  CLocalizationManager.h  CProjectSettings.h  CProxyGraphicsContext.h  CProxyInputContext.h  CResourceHandler.h  CResourceManager.h  CResourcesRuntimeManifest.h  CRuntimeFont.h  EntryPoint.h  Event.h  IAudioContext.h  IBaseObject.h  IDLLManager.h  IEngineCore.h  IEngineCoreBuilder.h  IEngineListener.h  IEngineSubsystem.h  IEventManager.h  IFile.h  IFileSystem.h  IFont.h  IGameModesManager.h  IGraphicsContext.h  IImGUIContext.h  IInputContext.h  IInputDevice.h  IJobManager.h  (+12 more)
TDEngine2/include/ecs/: CAnimationSystem.h  CBaseComponent.h  CBaseSystem.h  CBoundsUpdatingSystem.h  CCameraSystem.h  CComponentManager.h  CEntity.h  CEntityManager.h  CLODMeshSwitchSystem.h  CLightingSystem.h  CMeshAnimatorUpdatingSystem.h  CObjectsSelectionSystem.h  CParticlesSimulationSystem.h  CPhysics2DSystem.h  CPhysics3DSystem.h  CSkinnedMeshRendererSystem.h  CSplashScreenLogicSystem.h  CSpriteRendererSystem.h  CStaticMeshRendererSystem.h  CSystemManager.h  CTransform.h  CTransformSystem.h  CUIElementsProcessSystem.h  CUIElementsRenderSystem.h  CUIEventsSystem.h  CWeatherSystem.h  CWorld.h  ICameraSystem.h  IComponent.h  IComponentFactory.h  IComponentManager.h  ISystem.h  ISystemManager.h  ITransform.h  IWorld.h
TDEngine2/include/editor/: CAnimationCurveEditorWindow.h  CDevConsoleWindow.h  CEditorActionsManager.h  CEditorSettings.h  CEditorsManager.h  CLevelEditorWindow.h  CMemoryProfiler.h  CPerfProfiler.h  CProfilerEditorWindow.h  CProjectSettingsWindow.h  CRenderTargetViewerWindow.h  CResourcesBuildManifest.h  CSceneHierarchyWindow.h  CSelectionManager.h  CStatsCounters.h  CStatsViewerWindow.h  EditorActions.h  EditorUtils.h  IEditorWindow.h  IEditorsManager.h  IProfiler.h  ISelectionManager.h  Inspectors.h
TDEngine2/include/game/: CSaveData.h  CSaveManager.h  ISaveManager.h
TDEngine2/include/graphics/: CAnimationClip.h  CAtlasSubTexture.h  CBaseCamera.h  CBaseCubemapTexture.h  CBaseGraphicsObjectManager.h  CBaseGraphicsPipeline.h  CBaseMaterial.h  CBaseMesh.h  CBasePostProcessingProfile.h  CBaseRenderTarget.h  CBaseShader.h  CBaseShaderCompiler.h  CBaseShaderLoader.h  CBaseTexture2D.h  CBaseTexture3D.h  CDebugUtility.h  CForwardRenderer.h  CFrameGraph.h  CFrameGraphResources.h  CFramePacketsStorage.h  CFramePostProcessor.h  CGeometryBuilder.h  CGlobalShaderProperties.h  CGraphicsLayersInfo.h  COrthoCamera.h  CParticleEffect.h  CParticleEmitterComponent.h  CPerspectiveCamera.h  CQuadSprite.h  CRenderQueue.h  CSkeleton.h  CSkinnedMesh.h  CSkinnedMeshContainer.h  CStaticMesh.h  CStaticMeshContainer.h  CTextureAtlas.h  CVertexDeclaration.h  IAnimationClip.h  IAtlasSubTexture.h  IBuffer.h  (+35 more)
TDEngine2/include/math/: MathUtils.h  TAABB.h  TMatrix3.h  TMatrix4.h  TPlane.h  TQuaternion.h  TRay.h  TRect.h  TVector2.h  TVector3.h  TVector4.h
TDEngine2/include/physics/: CBaseRaycastContext.h  ICollisionObject.h  IPhysics3DSystem.h  IRaycastContext.h
TDEngine2/include/platform/: BinaryArchives.h  CBaseFile.h  CBinaryFileReader.h  CBinaryFileWriter.h  CBinaryMeshFileReader.h  CConfigFileReader.h  CConfigFileWriter.h  CCsvFileReader.h  CImageFileWriter.h  CPackageFile.h  CProxyWindowSystem.h  CTextFileReader.h  CTextFileWriter.h  CYAMLFile.h  IOStreams.h  MountableStorages.h
TDEngine2/include/scene/: CPrefabChangesList.h  CPrefabsManifest.h  CPrefabsRegistry.h  CScene.h  CSceneManager.h  IPrefabsManifest.h  IPrefabsRegistry.h  IScene.h  ISceneManager.h
TDEngine2/include/utils/: CContainers.h  CFileLogger.h  CGradientColor.h  CProgramOptions.h  CResourceContainer.h  CResult.h  CU8String.h  Color.h  Config.h  Config.h.in  ILogger.h  ITimer.h  Types.h  Utils.h
TDEngine2/plugins/: CMakeLists.txt
TDEngine2/plugins/D3D11GraphicsContext/: CMakeLists.txt
TDEngine2/plugins/D3D12GraphicsContext/: CMakeLists.txt
TDEngine2/plugins/DirectInputContext/: CMakeLists.txt
TDEngine2/plugins/FmodAudioContext/: CMakeLists.txt
TDEngine2/plugins/ImGUIContext/: CMakeLists.txt
TDEngine2/plugins/OGLGraphicsContext/: CMakeLists.txt
TDEngine2/plugins/TDE2BulletPhysics/: CMakeLists.txt
TDEngine2/plugins/TDE2VideoPlayers/: CMakeLists.txt
TDEngine2/tools/: CMakeLists.txt
tests/: CMakeLists.txt
tests/TDE2TestsRunner/: CMakeLists.txt  TDE2TestsRunner.project  main.cpp  main.cpp.in
tests/core/: AllocatorsTests.cpp  CBaseJobManagerTests.cpp  SerializationTests.cpp  allocatorsTests.cpp
tests/ecs/: CBaseComponentsTests.cpp  CComponentManagerTests.cpp  CEntityManagerTests.cpp  CWorldTests.cpp
tests/graphics/: CAnimationCurveTests.cpp  CFrameGraphTests.cpp  CFrustumTests.cpp  CGraphicsLayersInfoTests.cpp
tests/math/: TAABBTests.cpp  TMatrix3Tests.cpp  TMatrix4Tests.cpp  TPlaneTests.cpp  TQuaternionTests.cpp  TRayTests.cpp  TRectTests.cpp
tests/platform/: CTimerTests.cpp  FileSystemTests.cpp  IOStreamsTests.cpp
tests/scene/: CPrefabChangesListTests.cpp
tests/utils/: CContainersTests.cpp  CGradientColorTests.cpp  CProgramOptionsTests.cpp  CResourceContainerTests.cpp  CResultTests.cpp  CStringUtils.cpp  CU8StringTests.cpp  MacrosTests.cpp  UtilsTests.cpp
(+784 files in other folders)
